# Simple-RT

./: CMakeLists.txt  README.md  bounds.h  bvhtree.h  camera.h  colour.h  global.h  interval.h  main.cpp  material.h  mathematics.h  ray.h  scene.h  shapes.h  texture.h  vector.h
include/: bounds.h  bvhtree.h  camera.h  colour.h  conductor.h  dielectric.h  global.h  image.h  interval.h  material.h  materials.h  mathematics.h  medium.h  objects.h  perlin.h  ray.h  scene.h  shapes.h  texture.h  transformation.h  vector.h
source/: CMakeLists.txt  README.md  bounds.cpp  bounds.h  bvhtree.h  camera.h  global.h  image.h  interval.cpp  interval.h  main.cpp  material.h  objects.h  scene.h  shapes.cpp  shapes.h  texture.h  vector.h
